# api_cp

./: Dockerfile  README.md  __init__.py  docker-compose.yml  documentation_api.md  init-db.sql  mssql-entrypoint.sh  pyproject.toml  requirements  start.sh  supervisord.conf  uwsgi.ini  wsgi.py
.junie/: guidelines.md
api/: app.py  default_data.py  openapi.json
api/models/: __init__.py  baes.py  batiment.py  carte.py  config.py  etage.py  role.py  site.py  status.py  user.py  user_site_role.py
api/routes/: __init__.py  auth.py  baes_routes.py  batiment_routes.py  carte_routes.py  config_routes.py  etage_carte_routes.py  etage_routes.py  general_routes.py  me_routes.py  role_routes.py  site_carte_routes.py  site_routes.py  status_routes.py  user_role_routes.py  user_routes.py  user_site_role_routes.py  user_site_routes.py
api/templates/: TimestampMixin.py
azure/: README.md
scripts/: mqtt_to_baesapi.py  mqtt_to_baesapi.service
